# CVRL_practice

./: CMakeLists.txt
ReRun/: CMakeLists.txt  plotTrajectory.cpp  tutorial.cpp
RotationRepresentation/: CMakeLists.txt  main.cpp
RotationRepresentation/include/: Rotation2D.hpp
RotationRepresentation/src/: Rotation2D.cpp
ch2/: CMakeLists.txt  Makefile  cmake_install.cmake  libHelloSLAM.cpp  useHello  useHello.cpp
ch3/: CMakeLists.txt  Makefile  cmake_install.cmake  coordinateTransform  coordinateTransform.cpp  plotTrajectory  plotTrajectory.cpp  useEigen.cpp  useGeometry  useGeometry.cpp
ch4/: CMakeLists.txt  trajectoryError.cpp  useSophus.cpp
